[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/UI_Square.png" type="Texture" id=1]
[ext_resource path="res://Font/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Font/new_dynamicfont2.tres" type="DynamicFont" id=3]
[ext_resource path="res://GUI.gd" type="Script" id=4]

[node name="GUI" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="."]
self_modulate = Color( 0.0784314, 0.0745098, 0.0745098, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 366.0
margin_top = 480.0
margin_right = 616.0
margin_bottom = 540.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelBG" type="TextureRect" parent="BG"]
margin_left = 4.0
margin_top = 3.0
margin_right = 52.0
margin_bottom = 56.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelText" type="Label" parent="BG/LevelBG"]
self_modulate = Color( 0.32549, 0.313726, 0.313726, 1 )
margin_right = 48.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="BG"]
margin_left = 55.0
margin_top = 2.52802
margin_right = 247.0
margin_bottom = 30.528
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
tint_under = Color( 0.207843, 0.2, 0.2, 1 )
tint_progress = Color( 0.580392, 0.0313726, 0.0313726, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XpBar" type="TextureProgress" parent="BG"]
margin_left = 55.0
margin_top = 35.0
margin_right = 247.0
margin_bottom = 56.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
tint_under = Color( 0.207843, 0.2, 0.2, 1 )
tint_progress = Color( 0.803922, 0.792157, 0.0823529, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldText" type="Label" parent="."]
margin_left = 386.0
margin_top = 499.0
margin_right = 636.0
margin_bottom = 518.0
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
